[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.7.0"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
aiohttp = "^3.9.3"
accelerate = "^0.26.1"
pyyaml = "^6.0.1"
pillow = "^10.2.0"
scipy = "^1.12.0"
tqdm = "^4.66.1"
psutil = "^5.9.8"
torch = {version = "^2.2.0+cu118", source = "pytorch-cu118"}
torchvision = {version = "^0.17.0+cu118", source = "pytorch-cu118"}
torchaudio = {version = "^2.2.0+cu118", source = "pytorch-cu118"}
torchsde = "^0.2.6"
loguru = "^0.7.2"
autoflake = "^2.2.1"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
